Changes image format to improve loads trivially. Adds post.

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Phillip Bruno's Pressional Portfolio
 tagline: A simple website with a bit about me and my work. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  My personal portfolio and blog chronicling the thrilling saga of my professional life, it's mostly just a vanilla list of cool projects and work I've done. Sprinkled in with some sassy coffee critiques.
+  My personal portfolio and blog chronicling the thrilling saga of my professional life, it's mostly just a collection of shower thoughts and ramblings, prinkled in with some sassy coffee critiques.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
