--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Toronto
 
 title: Phillip Bruno's Pressional Portfolio
 
-tagline: A simple website with a bit about me and my work. # it will display as the subtitle
+tagline: A simple website with a bit about me, my work and my occasionally random thought. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   My personal portfolio and blog chronicling the thrilling saga of my professional life, it's mostly just a collection of shower thoughts and ramblings, prinkled in with some sassy coffee critiques.
