--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Toronto
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Phillip Bruno's Pressional Portfolio
+title: Phillip Bruno's Professional Portfolio
 
 tagline: A simple website with a bit about me, my work and my occasionally random thought. # it will display as the subtitle
 
